--- a/client/src/components/Login/styles.module.css
+++ b/client/src/components/Login/styles.module.css
@@ -1,12 +1,18 @@
 .login_container {
-	width: 100%;
-	min-height: 100vh;
-	background-color: #f5f5f5;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
+		color: var(--black);
+		background: linear-gradient(
+		  106.37deg,
+		  #bceebe 29.63%,
+		  #e7fae2 51.55%,
+		  #fadbf9 90.85%
+		);
+		height: 100vh;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-family: 'Inter', sans-serif;
+	  }
+  
 .login_form_container {
 	width: 900px;
 	height: 500px;
@@ -25,6 +31,7 @@
 	background-color: white;
 	border-top-left-radius: 10px;
 	border-bottom-left-radius: 10px;
+	font-family: 'Kanit', sans-serif;	
 }
 
 .form_container {
@@ -34,7 +41,7 @@
 }
 
 .form_container h1 {
-	font-size: 40px;
+	font-size: 30;
 	margin-top: 0;
 }
 
@@ -47,6 +54,7 @@
 	background-color: #edf5f3;
 	margin: 5px 0;
 	font-size: 14px;
+	font-family: 'Kanit', sans-serif;	
 }
 
 .error_msg {
@@ -66,16 +74,18 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: #3bb19b;
+	background-color: #a8eda2;
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
+	font-family: 'Kanit', sans-serif;	
 }
 
-.right h1 {
+.right p {
 	margin-top: 0;
 	color: white;
-	font-size: 40px;
+	font-size: 15px;
 	align-self: center;
+	font-family: 'Kanit';	
 }
 
 .white_btn,
@@ -86,13 +96,27 @@
 	background-color: white;
 	border-radius: 20px;
 	width: 180px;
-	font-weight: bold;
 	font-size: 14px;
 	cursor: pointer;
+	font-family: 'Kanit', sans-serif;	
 }
 
 .green_btn {
-	background-color: #3bb19b;
+	background-color: #233145;
 	color: white;
 	margin: 10px;
+	font-family: 'Kanit', sans-serif;
+	margin-top: 20px;
+}
+
+.userImage {
+	width: 200px; 
+	height: auto;
+	margin-bottom: 10px;
+  }
+.userImageLogo{
+	width: 280px; 
+	height: auto;
+	margin-top: 2px;
+	margin-bottom: 30px;
 }
